Painting composed, mmobile stylesheet added, Notes updated

--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
 <!doctype html>
-<head>
-  <meta charset="utf-8">
-  <title>Piet Mondrian - No. VI Composition No. II</title>
-  <meta name="description" content="A frontend dev aptitude test by Deep Space Robots.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <!-- Add your code here -->
+  <head>
+    <meta charset="utf-8">
+    <title>Piet Mondrian - No. VI Composition No. II</title>
+    <meta name="description" content="A frontend dev aptitude test by Deep Space Robots.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="wrapper">
+      <h2><em>No. VI/Composition No. II, 1920</em> by Piet Mondian</h2>
+      <h3>Oil paint on canvas</h3>
+      <h4>39 3/10 x 39 1/2 in.</h4>
   
-  
-</body>
+      <div class="frame">
+        <div class="container">
+          <div class="painting">
+            <div class="rectangle rectangle-1">1</div>
+            <div class="rectangle rectangle-2">2</div>
+            <div class="rectangle rectangle-3">3</div>
+            <div class="rectangle rectangle-4">4</div>
+            <div class="rectangle rectangle-5">5</div>
+            <div class="rectangle rectangle-6">6</div>
+            <div class="rectangle rectangle-7">7</div>
+            <div class="rectangle rectangle-8">8</div>
+            <div class="rectangle rectangle-9">9</div>
+            <div class="rectangle rectangle-10">10</div>
+            <div class="rectangle rectangle-11">11</div>
+            <div class="rectangle rectangle-12">12</div>
+            <div class="rectangle rectangle-13">13</div>
+            <div class="rectangle rectangle-14">14</div>
+            <div class="rectangle rectangle-15">15</div>
+            <div class="rectangle rectangle-16">16</div>
+            <div class="rectangle rectangle-17">17</div>
+            <div class="rectangle rectangle-18">18</div>
+            <div class="rectangle rectangle-19">19</div>
+            <div class="rectangle rectangle-20">20</div>
+            <div class="rectangle rectangle-21">21</div>
+            <div class="rectangle rectangle-22">22</div>
+            <div class="rectangle rectangle-23">23</div>
+            <div class="rectangle rectangle-24">24</div>
+            <div class="rectangle rectangle-25">25</div>
+            <div class="rectangle rectangle-26">26</div>
+            <div class="rectangle rectangle-27">27</div>
+            <div class="rectangle rectangle-28">28</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
-
