Mobile styles, Color palette added for Mobile

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <title>Piet Mondrian - No. VI Composition No. II</title>
     <meta name="description" content="A frontend dev aptitude test by Deep Space Robots.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="mobile.css">
+  
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
   </head>
   <body>
-    <div class="wrapper">
+    <header class="header">
       <h2><em>No. VI/Composition No. II, 1920</em> by Piet Mondian</h2>
       <h3>Oil paint on canvas</h3>
       <h4>39 3/10 x 39 1/2 in.</h4>
+    </header>
   
       <div class="frame">
         <div class="container">
@@ -46,6 +48,18 @@
             <div class="rectangle rectangle-27">27</div>
             <div class="rectangle rectangle-28">28</div>
           </div>
+        </div>
+      </div>
+
+      <div class="color-palette">
+        <h3>Color Palette Tracker</h3>
+        <div class="colors">
+          <div class="color black">Black: 5</div>
+          <div class="color dark-gray">Dark Gray: 6</div>
+          <div class="color light-gray">Light Gray: 5</div>
+          <div class="color red">Red: 4</div>
+          <div class="color blue">Blue: 4</div>
+          <div class="color yellow">Yellow: 4</div>
         </div>
       </div>
     </div>
