--- a/index.html
+++ b/index.html
@@ -14,45 +14,46 @@
       <h2><em>No. VI/Composition No. II, 1920</em> by Piet Mondian</h2>
       <h3>Oil paint on canvas</h3>
       <h4>39 3/10 x 39 1/2 in.</h4>
+      <h5>Priceless</h5>
     </header>
   
       <div class="frame">
         <div class="container">
           <div class="painting">
-            <div class="rectangle rectangle-1">1</div>
-            <div class="rectangle rectangle-2">2</div>
-            <div class="rectangle rectangle-3">3</div>
-            <div class="rectangle rectangle-4">4</div>
-            <div class="rectangle rectangle-5">5</div>
-            <div class="rectangle rectangle-6">6</div>
-            <div class="rectangle rectangle-7">7</div>
-            <div class="rectangle rectangle-8">8</div>
-            <div class="rectangle rectangle-9">9</div>
-            <div class="rectangle rectangle-10">10</div>
-            <div class="rectangle rectangle-11">11</div>
-            <div class="rectangle rectangle-12">12</div>
-            <div class="rectangle rectangle-13">13</div>
-            <div class="rectangle rectangle-14">14</div>
-            <div class="rectangle rectangle-15">15</div>
-            <div class="rectangle rectangle-16">16</div>
-            <div class="rectangle rectangle-17">17</div>
-            <div class="rectangle rectangle-18">18</div>
-            <div class="rectangle rectangle-19">19</div>
-            <div class="rectangle rectangle-20">20</div>
-            <div class="rectangle rectangle-21">21</div>
-            <div class="rectangle rectangle-22">22</div>
-            <div class="rectangle rectangle-23">23</div>
-            <div class="rectangle rectangle-24">24</div>
-            <div class="rectangle rectangle-25">25</div>
-            <div class="rectangle rectangle-26">26</div>
-            <div class="rectangle rectangle-27">27</div>
-            <div class="rectangle rectangle-28">28</div>
+            <div class="rectangle rectangle-1"><span class="color-counter">1</span></div>
+            <div class="rectangle rectangle-2"><span class="color-counter">2</span></div>
+            <div class="rectangle rectangle-3"><span class="color-counter">3</span></div>
+            <div class="rectangle rectangle-4"><span class="color-counter">4</span></div>
+            <div class="rectangle rectangle-5"><span class="color-counter">5</span></div>
+            <div class="rectangle rectangle-6"><span class="color-counter">6</span></div>
+            <div class="rectangle rectangle-7"><span class="color-counter">7</span></div>
+            <div class="rectangle rectangle-8"><span class="color-counter">8</span></div>
+            <div class="rectangle rectangle-9"><span class="color-counter">9</span></div>
+            <div class="rectangle rectangle-10"><span class="color-counter">10</span></div>
+            <div class="rectangle rectangle-11"><span class="color-counter">11</span></div>
+            <div class="rectangle rectangle-12"><span class="color-counter">12</span></div>
+            <div class="rectangle rectangle-13"><span class="color-counter">13</span></div>
+            <div class="rectangle rectangle-14"><span class="color-counter">14</span></div>
+            <div class="rectangle rectangle-15"><span class="color-counter">15</span></div>
+            <div class="rectangle rectangle-16"><span class="color-counter">16</span></div>
+            <div class="rectangle rectangle-17"><span class="color-counter">17</span></div>
+            <div class="rectangle rectangle-18"><span class="color-counter">18</span></div>
+            <div class="rectangle rectangle-19"><span class="color-counter">19</span></div>
+            <div class="rectangle rectangle-20"><span class="color-counter">20</span></div>
+            <div class="rectangle rectangle-21"><span class="color-counter">21</span></div>
+            <div class="rectangle rectangle-22"><span class="color-counter">22</span></div>
+            <div class="rectangle rectangle-23"><span class="color-counter">23</span></div>
+            <div class="rectangle rectangle-24"><span class="color-counter">24</span></div>
+            <div class="rectangle rectangle-25"><span class="color-counter">25</span></div>
+            <div class="rectangle rectangle-26"><span class="color-counter">26</span></div>
+            <div class="rectangle rectangle-27"><span class="color-counter">27</span></div>
+            <div class="rectangle rectangle-28"><span class="color-counter">28</span></div>
           </div>
         </div>
       </div>
 
       <div class="color-palette">
-        <h3>Color Palette Tracker</h3>
+        <h3>Color Palette</h3>
         <div class="colors">
           <div class="color black">Black: 5</div>
           <div class="color dark-gray">Dark Gray: 6</div>
